--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,11 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-  "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-  "start:prod": "cd server && npm start",
-  "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-  "install": "cd server && npm i && cd ../client && npm i",
-  "seed": "cd server && npm run seed"
-  },
+   "start": "react-scripts start",
+   "build": "react-scripts build",
+   "test": "react-scripts test",
+   "eject": "react-scripts eject"
+ },
   "eslintConfig": {
     "extends": [
       "react-app",
